--- a/gallery.html
+++ b/gallery.html
@@ -14,19 +14,48 @@
 </head>
 
 <body style="background-color: rgb(196, 225, 168);">
+    <nav>
+        <ul>
+            <li><a href=" #">Gallery</a></li>
+            <li><a href=" https://arpitasarkar0.github.io/second-portfolio-website/">Home</a></li>
+
+
+        </ul>
+    </nav>
+
     <div style="text-align: center;">
         <h1 style="color: rgb(248, 4, 208);font-size: 50px;">Flowers gallery</h1>
         <h2 style="color: hotpink;text-align: center;">Feel happy!</h2>
         <section class="flex">
             <div class="img"><img style="width: 400px;" src="flower/Morning glory.jpg" alt=""></div>
-            <div class="written">Name:fragrant virgin's bower</div>
+            <div class="written">
+                <h1 style="font-size: 30px; color: rgb(187, 95, 226);">Name:Cairo Morning Glory </h1>
+                <span style="color: deeppink;"><i>Scientific</i> name: Ipomoea cairica</span> <br>
+                The lavender-coloured inflorescences are oneto a little bloody cymes. The flower stalks are 12 to 20
+                mm
+                long, the sepals are 6 to 8 mm long, ovate and sting-pointed. The crown is funnel-shaped, 4 to 6 cm
+                long
+                and violet colored. The stamens and the stylus do not protrude
+                beyond the crown. The ovary is hairless. The fruits are spherical capsules approximately 1 cm in
+                diameter containing one or two hairy seeds. Each fruit matures at about 1 cm across and contains
+                hairy
+                seeds.
+            </div>
 
         </section>
 
         <section class="flex">
-            <div class="written">Name:Rose</div>
+            <div class="written">
+                <h1 style="font-size: 30px; color: rgb(240, 135, 235);">Name:Rose</h1>
+                <span style="color: rgb(23, 11, 185);"><i>Scientific</i> name: Rosa</span> <br>
+                A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it
+                bears. There are over three hundred species and tens of thousands of cultivars.They form a group of
+                plants that can be erect shrubs, climbing, or trailing, with stems that are often armed with sharp
+                prickles.
+            </div>
 
             <div class="img"><img style="width: 400px;" src="flower/rose.jpg" alt=""></div>
+
 
         </section>
 
@@ -34,17 +63,91 @@
 
 
             <div class="img"><img style="width: 400px;" src="flower/tara.jpg" alt=""></div>
-            <div class="written">Name:Rose</div>
+            <div class="written">
+                <h1 style="font-size: 30px; color: rgb(240, 28, 229);">Name: Brite eyes</h1>
+                <span style="color: rgb(3, 128, 18);"><i>Scientific</i> name:Madagascar Periwinkle</span> <br>
+                Catharanthus roseus, commonly known as bright eyes, Cape periwinkle, graveyard plant, Madagascar
+                periwinkle, old maid, pink periwinkle, rose periwinkle, is a species of flowering plant in the family
+                Apocynaceae. It is native and endemic to Madagascar, but grown elsewhere as an ornamental and medicinal
+                plant. It is a source of the drugs vincristine and vinblastine, used to treat cancer. It was formerly
+                included in the genus Vinca as Vinca rosea.
+            </div>
+
 
         </section>
 
         <section class="flex">
 
-            <div class="written">Name:Rose</div>
+            <div class="written">
+                <h1 style="font-size: 30px; color: rgb(226, 9, 9);">Name:Dianthus</h1> <br>
+                <span style="color: rgb(1, 109, 233);"><i>Scientific</i> name:Dianthus caryophyllus
+                </span> <br>
+                Dianthus is a genus of about 300 species of flowering plants in the family Caryophyllaceae, native
+                mainly to Europe and Asia, with a few species in north Africa and in southern Africa, and one species in
+                arctic North America. Common names include carnation, pink and sweet william.
+
+
+            </div>
 
             <div class="img"><img style="width: 400px;" src="flower/varbena.jpg" alt=""></div>
 
         </section>
+
+        <section class="flex">
+
+
+            <div class="img"><img style="width: 400px;" src="flower/bower.jpg" alt=""></div>
+
+            <div class="written">
+                <h1 style="font-size: 30px; color: rgb(25, 58, 15);">Name:Fragrant virgin's bower</h1> <br>
+                <span style="color: rgb(1, 109, 233);"><i>Scientific</i> name:Clematis flammula
+                </span> <br>
+                Clematis flammula is a temperate liana known by the common name fragrant virgin's bower. It is native to
+                southern Europe and northern Africa, but it is cultivated worldwide as an ornamental plant in gardens.
+                The woody vine bears fragrant white flowers and small green achenes.
+
+            </div>
+
+
+        </section>
+
+        <section class="flex">
+            <div class="written">
+                <h1 style="font-size: 30px; color: rgb(158, 2, 119);">Name:African daisy</h1> <br>
+                <span style="color: rgb(4, 94, 119);"><i>Scientific</i> name:Osteospermum
+
+                </span> <br>
+                Clematis flammula is a temperate liana known by the common name fragrant virgin's bower. It is native to
+                southern Europe and northern Africa, but it is cultivated worldwide as an ornamental plant in gardens.
+                The woody vine bears fragrant white flowers and small green achenes.
+
+            </div>
+
+            <div class="img"><img style="width: 400px;" src="flower/daisy.jpg" alt=""></div>
+
+
+
+
+        </section>
+
+        <section class="flex">
+
+
+            <div class="img"><img style="width: 400px;" src="flower/tarajhora.jpg" alt=""></div>
+
+            <div class="written">
+                <h1 style="font-size: 30px; color: rgb(160, 110, 3);">Namerag:First Love or Golden penda</h1> <br>
+                <span style="color: rgb(233, 9, 76);"><i>Scientific</i> name:Xanthostemon chrysanthus
+                </span> <br>
+                Golden penda (Xanthostemon chrysanthus) is a fabulous rainforest tree that thrives in sub-tropical and
+                warm temperate conditions. It's an Australian native that is related to eucalypts and bottlebrushes and
+                produces masses of amazing yellow flowers in summer and autumn.
+            </div>
+
+
+        </section>
+        <footer>© flower photography 2021.</footer>
+
 
 
 
