--- a/gallery.html
+++ b/gallery.html
@@ -64,7 +64,7 @@
 
             <div class="img"><img style="width: 400px;" src="flower/tara.jpg" alt=""></div>
             <div class="written">
-                <h1 style="font-size: 30px; color: rgb(240, 28, 229);">Name: Brite eyes</h1>
+                <h1 style="font-size: 30px; color: rgb(240, 28, 229);">Name: Bright eyes</h1>
                 <span style="color: rgb(3, 128, 18);"><i>Scientific</i> name:Madagascar Periwinkle</span> <br>
                 Catharanthus roseus, commonly known as bright eyes, Cape periwinkle, graveyard plant, Madagascar
                 periwinkle, old maid, pink periwinkle, rose periwinkle, is a species of flowering plant in the family
@@ -146,6 +146,10 @@
 
 
         </section>
+        <p style="font-size: 20px; color: rgb(103, 3, 121); text-align: center;">These are all pictures taken by me.
+            <br>
+            Mobile photography <span style="color: rgb(248, 8, 68);">&</span> Love fore nature.
+        </p>
         <footer>© flower photography 2021.</footer>
 
 
